[package]
name = "linear-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
linfa = "0.7.0"
linfa-linear = "0.7.0"
ndarray = "0.16.1"
polars = { version = "0.46.0", features = ["lazy"] }
